# symrustc

./: .gitmodules  Dockerfile  README.rst  build_all.sh  build_all_sudo.sh  build_local.sh  build_local_sudo.sh  build_remote.sh  build_rustc.sh  full_runtime.Dockerfile  git_current_branch.sh  git_rebase_versions.sh  git_rebase_versions_update.sh  llvm.Dockerfile  local.Dockerfile  make_build.sh  rustc.Dockerfile  symcc.Dockerfile  symrustc.Dockerfile  z3.Dockerfile
.github/workflows/: build.yml  run_tests.yml
bincode/: README.md
coreutils_base64/: README.md
examples/: build_docker1.sh  build_docker2.sh  build_docker3.sh  build_docker_none.sh  build_docker_rust_compile.sh  build_docker_rust_exec.sh  build_exec_clang++.sh  build_exec_ko-clang++.sh  build_exec_sym++_qsym.sh  build_exec_sym++_simple_z3.sh  build_llvm_clang++.sh  build_llvm_ko-clang++.sh  build_llvm_sym++.sh  clean_exec.sh  exec_cargo.sh  exec_rustc.sh  exec_rustc_file.sh  exec_rustc_stdin.sh  hexdump.sh  wait_all.sh
examples/coreutils_base64/fuzz/: Cargo.toml
examples/coreutils_base64/fuzz/fuzz_targets/: fuzz_target_1.rs
examples/source_0_original_1a_cpp/: generated_side_id.sh  sample.cpp
examples/source_0_original_1a_rs/: Cargo.toml
examples/source_0_original_1b_rs/: exec_rustc_file.sh  exec_rustc_stdin.sh
examples/source_0_original_1c0_rs/: Cargo.toml
examples/source_0_original_1c1_rs/: Cargo.toml
examples/source_0_original_1c3_rs/: Cargo.toml
examples/source_0_original_1c4_rs/: Cargo.toml
examples/source_0_original_1c5_rs/: Cargo.toml
examples/source_0_original_1c6_rs/: Cargo.toml
libfuzzer_rust_concolic_instance/: Makefile.toml  README.md
libfuzzer_rust_concolic_instance/fuzzer/: Cargo.toml  build.rs
libfuzzer_rust_concolic_instance/fuzzer/harness/: Cargo.toml
libfuzzer_rust_concolic_instance/fuzzer/harness/src/: lib.rs
libfuzzer_rust_concolic_instance/fuzzer/src/: main.rs
src/: main.rs
src/llvm/: cmake.sh  (+1 more)
src/symcc/runtime/noop_backend/: CMakeLists.txt  Runtime.cpp  Runtime.h
(+185 files in other folders)
