[package]
name = "libfuzzer_rust_concolic_instance"
version = "0.8.2"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>", "Julius Hohnerlein"]
edition = "2021"
build = "build.rs"

[features]
default = ["std"]
std = ["wait-timeout"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
libafl = { path = "../../../libafl/", features = ["concolic_mutation"] }
libafl_targets = { path = "../../../libafl_targets/", features = ["sancov_pcguard_edges", "sancov_cmplog", "libfuzzer"] }
clap = { version = "4.0", features = ["derive"]}
mimalloc = { version = "*", default-features = false }
wait-timeout = { version = "0.2", optional = true } # used by CommandExecutor to wait for child process

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
cmake = "0.1"
which = "4.1"
symcc_libafl = {path = "../../../libafl_concolic/symcc_libafl"}
